--- a/index.html
+++ b/index.html
@@ -11,12 +11,15 @@
 <body>
 
     <div class="flexy-container">
-        <div class="flexy-grid flexy-between flexy-col-reverse">
+        <div class="flexy-grid flexy-between">
             <div class="flexy-col flexy-w25">
-                <h2>Use flexy-1 through flexy-2 coupled with flexy-col to create partitioned layouts that add up to 12 columns. </h2>
+                <h2>Column with 25% width. </h2>
             </div>
             <div class="flexy-col flexy-w25">
-                <h2>Flexy grow</h2>
+              <div class="flexy-grid flexy-center flexy-middle">
+                <div class="flexy-col"><h2>Flexy grow</h2></div>
+              </div>
+
             </div>
             <div class="flexy-col flexy-w25">
                 <h2>Use flexy-1 through flexy-2 coupled with flexy-col to create partitioned layouts that add up to 12 columns. </h2>
@@ -49,9 +52,34 @@
         <div class="flexy-6 flexy-col">flexy-6</div>
     </div>
 
+    <div class="flexy-grid">
+        <div class="flexy-7 flexy-col">flexy-7</div>
+        <div class="flexy-5 flexy-col">flexy-5</div>
+    </div>
 
+    <div class="flexy-grid">
+        <div class="flexy-8 flexy-col">flexy-6</div>
+        <div class="flexy-4 flexy-col">flexy-4</div>
+    </div>
 
+    <div class="flexy-grid">
+        <div class="flexy-9 flexy-col">flexy-9</div>
+        <div class="flexy-3 flexy-col">flexy-3</div>
+    </div>
 
+    <div class="flexy-grid">
+        <div class="flexy-10 flexy-col">flexy-10</div>
+        <div class="flexy-2 flexy-col">flexy-2</div>
+    </div>
+
+    <div class="flexy-grid">
+        <div class="flexy-11 flexy-col">flexy-11</div>
+        <div class="flexy-1 flexy-col">flexy-1</div>
+    </div>
+
+    <div class="flexy-grid">
+        <div class="flexy-12 flexy-col">flexy-12</div>
+    </div>
 
 </body>
 
