Change margin of columns to ems
* fleshed out the top of index.html example.

--- a/index.html
+++ b/index.html
@@ -13,16 +13,16 @@
     <div class="flexy-container">
         <div class="flexy-grid flexy-between">
             <div class="flexy-col flexy-w25">
-                <h2>Column with 25% width. </h2>
+                <h2>Column with 25% width. Parent grid set to justify-content: space-between </h2>
             </div>
             <div class="flexy-col flexy-w25">
               <div class="flexy-grid flexy-center flexy-middle">
-                <div class="flexy-col"><h2>Flexy grow</h2></div>
+                <div class="flexy-col"><h2>Column nested within a flexy grid with items centered. Parent grid width is 25%</h2></div>
               </div>
-
             </div>
+
             <div class="flexy-col flexy-w25">
-                <h2>Use flexy-1 through flexy-2 coupled with flexy-col to create partitioned layouts that add up to 12 columns. </h2>
+                <h2>Column with 25% width. Parent grid set to justify-content: space-betweenå</h2>
             </div>
         </div>
     </div>
