--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <title>Simple Flexbox Grid</title>
     <meta name="viewport" content="width=device-width">
-    <link rel="stylesheet" href="flexy.css">
+    <link rel="stylesheet" href="css/flexy.css">
 </head>
 
 <body>
