Replaced the old flexy-grid name with the new flexy-row for rows.

--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
 
 <body>
     <div class="flexy-container">
-        <div class="flexy-grid flexy-between">
+        <div class="flexy-row flexy-between">
             <div class="flexy-col flexy-w25">
                 <h2>Column with 25% width. Parent grid set to justify-content: space-between </h2>
             </div>
 
             <div class="flexy-col flexy-w25">
-                <div class="flexy-grid flexy-center flexy-middle">
+                <div class="flexy-row flexy-center flexy-middle">
                     <div class="flexy-col">
                         <h2>Column nested within a flexy grid with items centered. Parent grid width is 25%</h2></div>
                 </div>
@@ -28,57 +28,57 @@
             </div>
         </div>
 
-        <div class="flexy-grid">
+        <div class="flexy-row">
             <div class="flexy-1 flexy-col">flexy-1</div>
             <div class="flexy-11 flexy-col">Flexy-11</div>
         </div>
 
-        <div class="flexy-grid">
+        <div class="flexy-row">
             <div class="flexy-2 flexy-col">flexy-2</div>
             <div class="flexy-10 flexy-col">flexy-10</div>
         </div>
 
-        <div class="flexy-grid">
+        <div class="flexy-row">
             <div class="flexy-4 flexy-col">flexy-4</div>
             <div class="flexy-8 flexy-col">flexy-8</div>
         </div>
 
-        <div class="flexy-grid">
+        <div class="flexy-row">
             <div class="flexy-5 flexy-col">flexy-5</div>
             <div class="flexy-7 flexy-col">flexy-7</div>
         </div>
 
-        <div class="flexy-grid">
+        <div class="flexy-row">
             <div class="flexy-6 flexy-col">flexy-6</div>
             <div class="flexy-6 flexy-col">flexy-6</div>
         </div>
 
-        <div class="flexy-grid">
+        <div class="flexy-row">
             <div class="flexy-7 flexy-col">flexy-7</div>
             <div class="flexy-5 flexy-col">flexy-5</div>
         </div>
 
-        <div class="flexy-grid">
+        <div class="flexy-row">
             <div class="flexy-8 flexy-col">flexy-6</div>
             <div class="flexy-4 flexy-col">flexy-4</div>
         </div>
 
-        <div class="flexy-grid">
+        <div class="flexy-row">
             <div class="flexy-9 flexy-col">flexy-9</div>
             <div class="flexy-3 flexy-col">flexy-3</div>
         </div>
 
-        <div class="flexy-grid">
+        <div class="flexy-row">
             <div class="flexy-10 flexy-col">flexy-10</div>
             <div class="flexy-2 flexy-col">flexy-2</div>
         </div>
 
-        <div class="flexy-grid">
+        <div class="flexy-row">
             <div class="flexy-11 flexy-col">flexy-11</div>
             <div class="flexy-1 flexy-col">flexy-1</div>
         </div>
 
-        <div class="flexy-grid">
+        <div class="flexy-row">
             <div class="flexy-12 flexy-col">flexy-12</div>
         </div>
 
